// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert customize 1`] = `
<div>
  <div
    class="bg-red-50 text-red-700 border-l-4 border-red-400 rounded-md p-4 newclass"
    role="alert"
  >
    <div
      class="flex justify-between"
    >
      <div
        class="flex"
      >
        <div>
          Test
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`loads and displays Alert component 1`] = `
<div>
  <div
    class="bg-yellow-50 text-yellow-700 rounded-md p-4"
    role="alert"
  >
    <div
      class="flex justify-between"
    >
      <div
        class="flex"
      >
        <div>
          Test Alert
        </div>
      </div>
    </div>
  </div>
</div>
`;
